[gd_scene load_steps=17 format=2]

[ext_resource path="res://rich_text_bbcode.gd" type="Script" id=1]
[ext_resource path="res://SATURDAY.png" type="Texture" id=2]
[ext_resource path="res://bg.png" type="Texture" id=6]
[ext_resource path="res://NewPiece.png" type="Texture" id=7]
[ext_resource path="res://DragableText.gd" type="Script" id=8]
[ext_resource path="res://Log.gd" type="Script" id=9]
[ext_resource path="res://separator.png" type="Texture" id=10]
[ext_resource path="res://document.tscn" type="PackedScene" id=11]
[ext_resource path="res://awesome_theme.tres" type="Theme" id=12]
[ext_resource path="res://RealDraggingText.gd" type="Script" id=13]
[ext_resource path="res://bell.wav" type="AudioStream" id=14]
[ext_resource path="res://background.ogg" type="AudioStream" id=15]
[ext_resource path="res://ripping.wav" type="AudioStream" id=16]
[ext_resource path="res://turnpage.wav" type="AudioStream" id=17]
[ext_resource path="res://fail.wav" type="AudioStream" id=18]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 324.253, 57.746 )

[node name="Panel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 277.073
margin_top = 120.955
margin_right = -746.927
margin_bottom = -479.045
rect_scale = Vector2( 0.49095, 0.564398 )
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "2D",
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 476.678, 316.247 )

[node name="Document" type="Area2D" parent="."]
position = Vector2( 149.423, -45.0895 )
z_index = -2

[node name="NewPiece" type="Sprite" parent="Document"]
position = Vector2( 406.562, 763.023 )
scale = Vector2( 1.27197, 1.44305 )
z_index = -1
texture = ExtResource( 7 )

[node name="Log" type="RichTextLabel" parent="Document"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 705.76
margin_top = 35.5971
margin_right = 808.76
margin_bottom = 54.5971
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 12 )
bbcode_enabled = true
bbcode_text = "adsf"
text = "adsf"
scroll_active = false
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text1" type="Area2D" parent="Document"]
position = Vector2( 149.58, 99.5756 )
script = ExtResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="Document/Text1"]
margin_left = -76.0
margin_top = -12.0
margin_right = 570.0
margin_bottom = 104.0
mouse_filter = 2
theme = ExtResource( 12 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Document/Text1"]
position = Vector2( 247.89, 44.4863 )
z_index = 12
shape = SubResource( 5 )

[node name="Text2" type="Area2D" parent="Document"]
position = Vector2( 149.58, 309.818 )
script = ExtResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="Document/Text2"]
margin_left = -78.0
margin_top = -19.0
margin_right = 570.0
margin_bottom = 91.0
mouse_filter = 2
theme = ExtResource( 12 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Document/Text2"]
position = Vector2( 244.973, 36.8747 )
z_index = 12
shape = SubResource( 5 )

[node name="Text3" type="Area2D" parent="Document"]
position = Vector2( 151.837, 494.343 )
script = ExtResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="Document/Text3"]
margin_left = -80.0
margin_top = -15.0
margin_right = 563.0
margin_bottom = 103.0
mouse_filter = 2
theme = ExtResource( 12 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Document/Text3"]
position = Vector2( 242.056, 41.9491 )
z_index = 12
shape = SubResource( 5 )

[node name="separator1" type="Sprite" parent="Document"]
position = Vector2( 343.47, 42.6211 )
texture = ExtResource( 10 )

[node name="separator2" type="Sprite" parent="Document"]
position = Vector2( 341.882, 246.829 )
texture = ExtResource( 10 )

[node name="document" parent="Document" instance=ExtResource( 11 )]
position = Vector2( 436.289, 310.926 )

[node name="separator3" type="Sprite" parent="Document"]
position = Vector2( 349.045, 443.073 )
texture = ExtResource( 10 )

[node name="separator4" type="Sprite" parent="Document"]
position = Vector2( 345.273, 625.124 )
texture = ExtResource( 10 )

[node name="TextNew" type="Area2D" parent="Document"]
position = Vector2( 156.424, 751.346 )
scale = Vector2( 1, 1 )
script = ExtResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="Document/TextNew"]
margin_left = -84.0
margin_top = -39.0
margin_right = 558.0
margin_bottom = 73.0
mouse_filter = 2
theme = ExtResource( 12 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Document/TextNew"]
position = Vector2( 236.926, 14.1104 )
z_index = 12
shape = SubResource( 5 )

[node name="AcceptDialog" type="AcceptDialog" parent="Document"]
margin_left = -154.051
margin_top = 149.757
margin_right = -46.051
margin_bottom = 207.757
window_title = "Warnung!"

[node name="DraggingText" type="RichTextLabel" parent="Document"]
margin_left = 68.0
margin_top = 273.0
margin_right = 512.0
margin_bottom = 420.0
mouse_filter = 2
theme = ExtResource( 12 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
scroll_active = false
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bell" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="fail" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="ripping" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="background" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -6.455
autoplay = true

[node name="turning" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="SATURDAY" type="Sprite" parent="."]
position = Vector2( 483.064, 316.539 )
scale = Vector2( 1.08248, 1.10959 )
z_index = -9
texture = ExtResource( 2 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 484.308, 317.409 )
scale = Vector2( 1.09338, 1.001 )
z_index = -10
texture = ExtResource( 6 )
[connection signal="meta_clicked" from="Document/Log" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="input_event" from="Document/Text1" to="Document/Text1" method="_on_Area2D_input_event"]
[connection signal="input_event" from="Document/Text2" to="Document/Text2" method="_on_Area2D_input_event"]
[connection signal="input_event" from="Document/Text3" to="Document/Text3" method="_on_Area2D_input_event"]
[connection signal="input_event" from="Document/TextNew" to="Document/TextNew" method="_on_Area2D_input_event"]
